# dotfiles

./: .Xresources  .alacritty.yml  .spacemacs  .vimrc  .xinitrc  .xsessionrc  .zpreztorc  .zprofile  .zshrc
.bin/: lock.sh  open-in-editor.sh  power.sh  start-polybar  start-xmonad-session
.config/: monitors.xml
.config/Code/User/: keybindings.json  settings.json
.config/compton/: compton.conf
.config/polybar/: config
.config/rofi/: config
.xmonad/: my-xmonad.cabal  stack.yaml  xmonad.hs
.zprezto/runcoms/: zpreztorc  zprofile  zshrc
