name:                my-xmonad
version:             0.1.0.0
license:             MIT
author:              scen
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             xmonad.hs
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
  default-language:    Haskell2010
  ghc-options:         -fforce-recomp